--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16"
   },
   "dependencies": {
-    "stats-js": "1.0.1",
+    "stats.js": "0.17.0",
     "gl-matrix": "3.3.0",
     "park-miller": "2.0.0"
   },
