--- a/package.json
+++ b/package.json
@@ -7,33 +7,33 @@
     "node": "16"
   },
   "dependencies": {
-    "stats.js": "0.17.0",
     "gl-matrix": "3.3.0",
-    "park-miller": "2.0.0"
+    "park-miller": "2.0.0",
+    "stats.js": "0.17.0"
   },
   "devDependencies": {
-    "@ampproject/rollup-plugin-closure-compiler": "0.26.0",
-    "@babel/core": "7.14.8",
-    "@babel/preset-typescript": "7.14.5",
-    "@babel/types": "7.14.8",
+    "@ampproject/rollup-plugin-closure-compiler": "0.27.0",
+    "@babel/core": "7.15.0",
+    "@babel/preset-typescript": "7.15.0",
+    "@babel/types": "7.15.0",
     "@rollup/plugin-babel": "5.3.0",
-    "@rollup/plugin-commonjs": "19.0.2",
+    "@rollup/plugin-commonjs": "20.0.0",
     "@rollup/plugin-node-resolve": "13.0.4",
     "@types/google-closure-compiler": "0.0.19",
     "@types/html-minifier-terser": "5.1.2",
-    "@types/jest": "26.0.24",
+    "@types/jest": "27.0.1",
     "@types/mkdirp": "1.0.2",
     "babel-plugin-transform-define": "2.0.0",
-    "html-minifier-terser": "5.1.1",
-    "jest": "27.0.6",
+    "html-minifier-terser": "6.0.0",
+    "jest": "27.1.0",
     "mkdirp": "1.0.4",
     "prettier": "2.3.2",
-    "rollup": "2.55.0",
+    "rollup": "2.56.3",
     "rollup-pluginutils": "2.8.2",
-    "terser": "5.7.1",
-    "ts-jest": "27.0.4",
-    "ts-node": "10.1.0",
-    "typescript": "4.3.5",
+    "terser": "5.7.2",
+    "ts-jest": "27.0.5",
+    "ts-node": "10.2.1",
+    "typescript": "4.4.2",
     "webpack-glsl-minify": "1.4.2"
   },
   "scripts": {
