--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,9 @@ jobs:
         run: |
           node -e "const s=require('fs').statSync('dist/bundle.zip').size;console.log(JSON.stringify({label:'size',message:(s/1024).toFixed(2)+'K',color:s<13312?'success':'important'}))" > dist/shieldio_size.json
 
+      - name: copy images
+        run: cp -R doc/images dist/images
+
       - name: deploy to gh-pages
         uses: crazy-max/ghaction-github-pages@v2
         if: success() && github.ref == 'refs/heads/master'
